# audio-purifier

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements-tests.txt  requirements.txt
.github/workflows/: test.yml
audio_purifier/: __init__.py  purifier.py  utils.py
audio_purifier/faster_whisper_original/: audio.py  utils.py  vad.py
docs/: conf.py  index.rst  usage.rst
docs/reference/: index.rst
scripts/: lint.sh
tests/: test_purifier.py
tests/data/: raw_audio.m4a  silences.m4a
