[build-system]
build-backend = "hatchling.build"
requires = ["hatchling >= 1.13.0"]

[project]
authors = [
  {email = "danghuy1999@gmail.com", name = "Huy Nguyen"}
]
classifiers = [
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Multimedia :: Sound/Audio :: Conversion"
]
dependencies = []
description = "Enables silent parts removal from audio, exporting as new files. Inspired by 'faster-whisper'."
dynamic = ["version"]
license = "MIT"
name = "audio-purifier"
readme = "README.md"
requires-python = ">=3.7"

[project.optional-dependencies]
extra = []

[project.urls]
Documentation = "https://github.com/huynguyengl99/audio-purifier"
Homepage = "https://github.com/huynguyengl99/audio-purifier"
Repository = "https://github.com/huynguyengl99/audio-purifier"

[tool.black]
exclude = '''
/(
    \.git
 |  \.pytest_cache
 |  \.vscode
 |  __pycache__
 |  .venv
 |  build
 |  coverage
)/
'''
line-length = 88
preview = true

[tool.hatch.version]
path = "audio_purifier/__init__.py"

[tool.ruff]
ignore = [
  "E501"  # line too long, handled by black
]
select = [
  "B",  # flake8-bugbear
  "C",  # flake8-comprehensions
  "E",  # pycodestyle errors
  "ERA",  # eradicate
  "F",  # pyflakes
  "I",  # isort
  "N",  # pep8-naming
  "PL",  # pylint
  "Q",  # flake8-quotes
  "UP",  # pyupgrade
  "W"  # pycodestyle warnings
]
src = ["audio_purifier"]

[tool.tomlsort]
all = true
in_place = true
spaces_before_inline_comment = 2
